<resources>
    <string name="app_name">CA$H MANAGER</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="network_location">Network Location</string>
    <string name="password">Password</string>
    <string name="submit">Login</string>
    <string name="cash_manager">CA$H MANAGER</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image">image</string>
    <string name="_000000">0.00</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="show_bill_and_go_to_cart">Go to cart 0.00€</string>
    <string name="add_article_with_qrcode">QR code</string>
    <string name="nfc">NFC</string>
    <string name="qr_code">QR CODE</string>
    <string name="pendingAuthorization">Pending Authorization</string>
    <string name="paymentAccepted">Payment Accepted</string>
    <string name="paymentRefused">Payment Refused</string>
    <string name="back_to_menu">Back to menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>