<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = ".MainActivity">
    <LinearLayout
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">
        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash_manager"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="120dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/et_user_name"
            android:padding="8dp"
            android:background="@drawable/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/user_name"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:autofillHints="" />
        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/et_password"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/edittextstyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
        <Button
            android:id="@+id/submit"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>